--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor/local.settings.json
