--- a/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor.csproj
+++ b/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor.csproj
@@ -1,16 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LogAnalytics.Extensions.Logging" Version="1.2.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Management.ResourceGraph" Version="2.1.0" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.12" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.12" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.12" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
@@ -22,5 +26,9 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
       <Generator>SettingsSingleFileGenerator</Generator>
     </None>
+    <FunctionsPreservedDependencies Include="Microsoft.Extensions.Http.dll" />
+    <FunctionsPreservedDependencies Include="Microsoft.Extensions.Logging.dll" />
+    <FunctionsPreservedDependencies Include="Microsoft.Extensions.Logging.Abstractions.dll" />
+    <FunctionsPreservedDependencies Include="Microsoft.Extensions.Options.dll" />
   </ItemGroup>
 </Project>
