added new Activity Log Provider

--- a/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor.csproj
+++ b/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor/Livethoughts.Azure.Toolkit.Monitoring.ResourceChangedMonitor.csproj
@@ -2,9 +2,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <UserSecretsId>97a7b01e-057f-47cc-a1f7-d342a3fda2a7</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LogAnalytics.Extensions.Logging" Version="1.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Management.ResourceGraph" Version="2.1.0" />
